--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(plot,mediation_joint)
 S3method(plot,mediation_scan)
 S3method(plot,mediation_test)
 S3method(plot,mediation_triad)
+S3method(print,summary.mediation_triad)
 S3method(subset,mediation_scan)
 S3method(subset,mediation_test)
 S3method(summary,mediation_scan)
