--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ importFrom(ggplot2,element_rect)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_rug)
 importFrom(ggplot2,geom_smooth)
@@ -88,6 +89,7 @@ importFrom(grid,grid.newpage)
 importFrom(grid,pushViewport)
 importFrom(grid,unit)
 importFrom(grid,viewport)
+importFrom(knitr,kable)
 importFrom(purrr,map)
 importFrom(purrr,simplify_all)
 importFrom(purrr,transpose)
@@ -100,6 +102,7 @@ importFrom(stats,lm)
 importFrom(stats,model.matrix)
 importFrom(stats,pbinom)
 importFrom(stats,pnorm)
+importFrom(stringr,str_remove)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_split)
 importFrom(tidyr,pivot_longer)
