--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ S3method(subset,mediation_test)
 S3method(summary,mediation_scan)
 S3method(summary,mediation_test)
 S3method(summary,mediation_triad)
+export(bind_mediation_index)
 export(binomIUCMST)
 export(calcICs)
 export(calcShat)
