--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: intermediate
 Type: Package
 Title: eQTl/pQTL Mediation analysis
-Version: 0.9.2
-Date: 2022-11-13
+Version: 1.0.0
+Date: 2024-07-22
 Authors@R: c(person("Petr Simecek", role = "aut"),
   person("Steven Munger", role = "aut"),
   person("Gary Churchill", role = "aut", email = "gary.churchill@jax.org"),
@@ -12,6 +12,8 @@ Description: Search for a mediator M that would explain D->T relationship.
 Depends: R (>= 3.5.0)
 Imports: ggplot2,
          dplyr,
+         furrr,
+         future,
          testthat,
          stringr,
          tidyr,
@@ -29,5 +31,5 @@ VignetteBuilder: knitr
 License: GPL-3
 LazyData: true
 URL: https://github.com/churchill-lab/intermediate
-RoxygenNote: 7.2.2
+RoxygenNote: 7.3.2
 Encoding: UTF-8
