--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,12 @@ importFrom(dplyr,one_of)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,ungroup)
+importFrom(furrr,future_map)
+importFrom(future,availableCores)
+importFrom(future,multicore)
+importFrom(future,plan)
+importFrom(future,sequential)
+importFrom(future,supportsMulticore)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,element_blank)
